Fixed versions and repository

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.6,<4.0"
-acme = ">=0.31.0"
-certbot = ">=0.31.0,<2.0.0"
+acme = ">=2.6.0"
+certbot = "2.6.0"
 dns-lexicon = ">=3.2.3"
 "zope.interface" = ">=5.4.0"
 urllib3 = "^1.26.4"
